Fix right panel overflow

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -96,6 +96,8 @@ body {
 
 .panel-right {
     width: 25%;
+    height: 80vh;
+    overflow-x: auto;
 }
 
 /* Story overview */
